# Scorch

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/color/: Color.cpp  Color.h  InterpolatedPalette.cpp  InterpolatedPalette.h  Palette.cpp  Palette.h  RandomPalette.cpp  RandomPalette.h
src/flame/: Flame.cpp  Flame.h  FlameAccumulator.cpp  FlameAccumulator.h  FlameTransformation.cpp  FlameTransformation.h  Variation.cpp  Variation.h
src/geometry2d/: AffineTransformation.cpp  AffineTransformation.h  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h  Transformation.h
